publish: Add fires ms to microservice reference list
generated from commit 20664851fd4cf9d4c1797ecddfcb0647a98e2b26

--- a/developer.html
+++ b/developer.html
@@ -1954,6 +1954,12 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 <td style="text-align: right"><a href="https://codeclimate.com/github/resource-watch/document-adapter/test_coverage"><img src="https://api.codeclimate.com/v1/badges/381fe72ebbdaaeb9aff4/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
+<td>fires summary</td>
+<td style="text-align: center"><a href="https://github.com/gfw-api/fires-summary-stats/">Github</a></td>
+<td style="text-align: right"></td>
+<td style="text-align: right"></td>
+</tr>
+<tr>
 <td>gee</td>
 <td style="text-align: center"><a href="https://github.com/resource-watch/adapter-earth-engine">Github</a></td>
 <td style="text-align: right"><a href="https://travis-ci.com/resource-watch/adapter-earth-engine"><img src="https://travis-ci.com/resource-watch/adapter-earth-engine.svg?branch=dev" alt="Build Status" /></a></td>
