publish: Update NEXGDDP MS urls following GH org migration
generated from commit d3511f0299b8805ede822f39b293246977d82963

--- a/developer.html
+++ b/developer.html
@@ -2237,9 +2237,9 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 </thead><tbody>
 <tr>
 <td>nexgddp</td>
-<td style="text-align: center"><a href="https://github.com/Vizzuality/prep-nexgddp">Github</a></td>
-<td style="text-align: right"><a href="https://travis-ci.com/Vizzuality/prep-nexgddp"><img src="https://travis-ci.com/Vizzuality/prep-nexgddp.svg?branch=develop" alt="Build Status" /></a></td>
-<td style="text-align: right"><a href="https://codeclimate.com/github/Vizzuality/prep-nexgddp/test_coverage"><img src="https://api.codeclimate.com/v1/badges/95cbefa669563539f187/test_coverage" alt="Test Coverage" /></a></td>
+<td style="text-align: center"><a href="https://github.com/resource-watch/prep-nexgddp">Github</a></td>
+<td style="text-align: right"><a href="https://travis-ci.com/resource-watch/prep-nexgddp"><img src="https://travis-ci.com/resource-watch/prep-nexgddp.svg?branch=dev" alt="Build Status" /></a></td>
+<td style="text-align: right"><a href="https://codeclimate.com/github/resource-watch/prep-nexgddp/test_coverage"><img src="https://api.codeclimate.com/v1/badges/b9bac026b8eb531a7e19/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
 <td>prep-api</td>
