publish: Add fires-summary badges
generated from commit 9f0b75038e2065277075fda1b5427a4e0c1b97cd

--- a/developer.html
+++ b/developer.html
@@ -1956,8 +1956,8 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 <tr>
 <td>fires summary</td>
 <td style="text-align: center"><a href="https://github.com/gfw-api/fires-summary-stats/">Github</a></td>
-<td style="text-align: right"></td>
-<td style="text-align: right"></td>
+<td style="text-align: right"><a href="https://travis-ci.com/gfw-api/fires-summary-stats"><img src="https://travis-ci.com/gfw-api/fires-summary-stats.svg?branch=dev" alt="Build Status" /></a></td>
+<td style="text-align: right"><a href="https://codeclimate.com/github/gfw-api/fires-summary-stats/test_coverage"><img src="https://api.codeclimate.com/v1/badges/991ade88cf1913c0ecd9/test_coverage" alt="Test Coverage" /></a></td>
 </tr>
 <tr>
 <td>gee</td>
