--- a/index.html
+++ b/index.html
@@ -382,7 +382,9 @@
 <p>For readability, URLs and query parameters in this documentation may be displayed without escaping/encoding, but be sure to encode your URLs before issuing a request to the API, or it may produce undesired results. If you are using the RW API to build your own application, there&#39;s probably a library out there that does this for you automatically.</p>
 
 <p>Throughout the docs, you&#39;ll find references to a <code>Authorization: Bearer &lt;your-token&gt;</code> HTTP header. You can find more details about tokens in the <a href="reference.html#authentication">authentication</a> section, or by following the <a href="quickstart.html">quickstart guide</a>.</p>
-<h1 id='how-these-docs-are-organized'>How these docs are organized</h1><h2 id='getting-started'>Getting Started</h2>
+<h1 id='how-these-docs-are-organized'>How these docs are organized</h1>
+<p>The docs are organized into four sections, described below. You can always navigate between the sections using the links at the top of the left sidebar.</p>
+<h2 id='getting-started'>Getting Started</h2>
 <p>The <a href="quickstart.html">quickstart guide</a> will get you up and running with the RW API. In it, you will learn how to create an account, get your JSON Web Token for authentication, and make a test request.</p>
 
 <p>If you&#39;re new to the API, this is the place to start!</p>
