publish: Make inter-page links relative!
generated from commit e4b55e10307bb156c47a663e466ad2b39586a262

--- a/reference.html
+++ b/reference.html
@@ -302,19 +302,19 @@
         </div>
       <ul class="toc-list-h1">
         <li>
-          <a href="/index.html" class="toc-h1 toc-link" data-title="Home">Home</a>
+          <a href="index.html" class="toc-h1 toc-link" data-title="Home">Home</a>
         </li>
         <li>
-          <a href="/quickstart.html" class="toc-h1 toc-link" data-title="Quickstart">Quickstart</a>
+          <a href="quickstart.html" class="toc-h1 toc-link" data-title="Quickstart">Quickstart</a>
         </li>
         <li>
-          <a href="/concepts.html" class="toc-h1 toc-link" data-title="Concepts">Concepts</a>
+          <a href="concepts.html" class="toc-h1 toc-link" data-title="Concepts">Concepts</a>
         </li>
         <li>
-          <a href="/reference.html" class="toc-h1 toc-link" data-title="Reference">Reference</a>
+          <a href="reference.html" class="toc-h1 toc-link" data-title="Reference">Reference</a>
         </li>
         <li>
-          <a href="/tutorials.html" class="toc-h1 toc-link" data-title="Tutorials">Tutorials</a>
+          <a href="tutorials.html" class="toc-h1 toc-link" data-title="Tutorials">Tutorials</a>
         </li>
       </ul>
         <div class="search">
@@ -2011,7 +2011,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='/quickstart.html'>Getting started</a></li>
+            <li><a href='quickstart.html'>Getting started</a></li>
             <li><a href='https://github.com/resource-watch/doc-api'>Contribute to these docs</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
@@ -2043,7 +2043,7 @@
 <h2 id='getting-all-datasets'>Getting all datasets</h2>
 <p>This endpoint will allow you to get the list of the datasets available in the API, and it&#39;s a great place for new users to start exploring the RW API. By default, this endpoint will give you a paginated list of 10 datasets. In the sections below, we&#39;ll explore how you can customize this endpoint call to match your needs. </p>
 
-<p>For a detailed description of each field, check out the [Dataset reference/reference.html#dataset-reference) section.</p>
+<p>For a detailed description of each field, check out the <a href="reference.html#dataset-reference">Dataset reference</a> section.</p>
 
 <blockquote>
 <p>Getting a list of datasets</p>
@@ -2622,7 +2622,7 @@
 </code></pre></div>
 <p>If you know the id or the <code>slug</code> of a dataset, then you can access it directly. Both id and <code>slug</code> are case-sensitive.</p>
 
-<p>Using this endpoint, you can also <a href="/reference.html/#include-entities-associated-with-the-datasets">include entities associated with the dataset</a>, in the same way you do when loading multiple datasets. </p>
+<p>Using this endpoint, you can also <a href="reference.html/#include-entities-associated-with-the-datasets">include entities associated with the dataset</a>, in the same way you do when loading multiple datasets. </p>
 
 <blockquote>
 <p>Getting a dataset by its including its relationships:</p>
@@ -15363,7 +15363,7 @@ Remember — All favorite endpoints need to be authenticated.
     </span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
-<p>The <code>/v2/areas</code> endpoint returns all the areas of interest associated with the user who made the request. For a detailed description of each field, check out the <a href="/reference.html/#area-reference">Area reference</a> section.</p>
+<p>The <code>/v2/areas</code> endpoint returns all the areas of interest associated with the user who made the request. For a detailed description of each field, check out the <a href="reference.html/#area-reference">Area reference</a> section.</p>
 <h3 id='pagination'>Pagination</h3>
 <blockquote>
 <p>Example request to load page 2 using 25 results per page</p>
@@ -15683,7 +15683,7 @@ Remember — All favorite endpoints need to be authenticated.
     </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
-<p>Use this endpoint to create new areas. For a detailed description of each field that can be provided in the body of the request, check out the <a href="/reference.html/#area-reference">Area reference</a> section.</p>
+<p>Use this endpoint to create new areas. For a detailed description of each field that can be provided in the body of the request, check out the <a href="reference.html/#area-reference">Area reference</a> section.</p>
 
 <p>Keep in mind that you should provide one of the following when creating an area:</p>
 
@@ -15793,7 +15793,7 @@ Remember — All favorite endpoints need to be authenticated.
     </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
-<p>Use this endpoint to update an existing area. For a detailed description of each field that can be provided in the body of the request, check out the <a href="/reference.html/#area-reference">Area reference</a> section. Keep in mind that you must provide one of the following when updating an area:</p>
+<p>Use this endpoint to update an existing area. For a detailed description of each field that can be provided in the body of the request, check out the <a href="reference.html/#area-reference">Area reference</a> section. Keep in mind that you must provide one of the following when updating an area:</p>
 
 <ul>
 <li><code>geostore</code> with the id of a geostore object obtained from <a href="reference.html#geostore">RW API&#39;s Geostore service</a>, if you are updating an area that references a geostore;</li>
