--- a/developer.html
+++ b/developer.html
@@ -302,19 +302,19 @@
         </div>
       <ul class="toc-list-h1">
         <li>
-          <a href="/index.html" class="toc-h1 toc-link" data-title="Home">Home</a>
+          <a href="index.html" class="toc-h1 toc-link" data-title="Home">Home</a>
         </li>
         <li>
-          <a href="/quickstart.html" class="toc-h1 toc-link" data-title="Quickstart">Quickstart</a>
+          <a href="quickstart.html" class="toc-h1 toc-link" data-title="Quickstart">Quickstart</a>
         </li>
         <li>
-          <a href="/concepts.html" class="toc-h1 toc-link" data-title="Concepts">Concepts</a>
+          <a href="concepts.html" class="toc-h1 toc-link" data-title="Concepts">Concepts</a>
         </li>
         <li>
-          <a href="/reference.html" class="toc-h1 toc-link" data-title="Reference">Reference</a>
+          <a href="reference.html" class="toc-h1 toc-link" data-title="Reference">Reference</a>
         </li>
         <li>
-          <a href="/tutorials.html" class="toc-h1 toc-link" data-title="Tutorials">Tutorials</a>
+          <a href="tutorials.html" class="toc-h1 toc-link" data-title="Tutorials">Tutorials</a>
         </li>
       </ul>
         <div class="search">
@@ -941,7 +941,7 @@
           </li>
       </ul>
         <ul class="toc-footer">
-            <li><a href='/quickstart.html'>Getting started</a></li>
+            <li><a href='quickstart.html'>Getting started</a></li>
             <li><a href='https://github.com/resource-watch/doc-api'>Contribute to these docs</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
