publish: Fix broken redirects
generated from commit 18ab0d5c4a7c5eee4cec3dfd77d49defac3b848f

--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -320,7 +320,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <p><meta http-equiv="Refresh" content="0; url='/'" /></p>
+        <p><meta http-equiv="Refresh" content="0; url='/doc-api'" /></p>
 
       </div>
       <div class="dark-box">
