--- a/index-gfw.html
+++ b/index-gfw.html
@@ -320,7 +320,7 @@
     <div class="page-wrapper">
       <div class="dark-box"></div>
       <div class="content">
-        <p><meta http-equiv="Refresh" content="0; url='/'" /></p>
+        <p><meta http-equiv="Refresh" content="0; url='/doc-api'" /></p>
 
       </div>
       <div class="dark-box">
