deploy: ce8242ebfacc2ef73c2cb65d3ade0642366bdc50

--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
         <ul class="toc-footer">
             <li><a href='quickstart.html'>Getting started</a></li>
             <li><a href='https://github.com/resource-watch/doc-api'>Contribute to these docs</a></li>
-            <li><a href='/developer.html'>Internal developer documentation</a></li>
+            <li><a href='developer.html'>Internal developer documentation</a></li>
             <li><a href='https://github.com/tripit/slate'>Documentation Powered by Slate</a></li>
         </ul>
     </div>
