deploy: 8d17231ebc5fa08c1c9ec7af7572373b5a1530c1

--- a/reference.html
+++ b/reference.html
@@ -2032,7 +2032,7 @@
 
 <p>Authentication is performed using bearer auth. For all authenticated requests, you must provide your JWT using the header <code>Authorization: Bearer &lt;your token&gt;</code>.</p>
 
-<p>If you lose your JWT, or if it becomes invalidated (which happens whenever the name, email, or applications associated with your account changes), you can always log in via the browser and generate a new token at <a href="https://api.resourcewatch.org/auth/generate-token">https://api.resourcewatch.org/auth/generate-token</a>.</p>
+<p>If you lose your JWT, or if it becomes invalidated (which happens whenever the name, email, or applications associated with your account changes), you can always <a href="https://api.resourcewatch.org/auth/login">log in via the browser</a> and generate a new token at <a href="https://api.resourcewatch.org/auth/generate-token">https://api.resourcewatch.org/auth/generate-token</a>.</p>
 <h1 id='dataset'>Dataset</h1><h2 id='what-is-a-dataset'>What is a dataset?</h2>
 <p>If you are new to the RW API, or want to learn more about the concept of a dataset, we strongly encourage you to read the <a href="concepts.html#dataset">dataset concept</a> documentation first. It gives you a brief and clear description of what a dataset is, and what it can do for you.</p>
 
